# mesh-llm

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  HUMANS.md  Justfile  LLAMA_CPP_SHA  MLX_ROADMAP.md  MLX_VALIDATION_MATRIX.md  PLUGINS.md  PR_DESCRIPTION_184.md  Package.swift  README.md  RELEASE.md  ROADMAP.md  install.ps1  install.sh
.github/: PULL_REQUEST_TEMPLATE.md  actionlint.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: behavior.yml  ci.yml  debug-slim-cache.yml  docker-precheck.yml  docker.yml  hf-download-smoke.yml  llama-upstream-canary.yml  nightly-stability-run.yml  nightly-stability.yml  pr_builds.yml  pr_cleanup.yml  pr_quality.yml  queue-unsloth-layer-packages.yml  release.yml  reset-caches.yml  scripted-binary-smoke.yml  sdk-smoke.yml  smoke.yml  stale-prs.yml  windows-warm-caches.yml
.playwright-cli/: page-2026-04-02T03-10-57-857Z.yml
ci/: ci.md  linux-test.dockerfile
commitllm-plugin/: Cargo.toml
commitllm-plugin/src/: main.rs
crates/mesh-client/: Cargo.toml  README.md
crates/mesh-llm/: Cargo.toml
crates/mesh-llm-api-client/: Cargo.toml  README.md
crates/mesh-llm-api-server/: Cargo.toml  README.md
crates/mesh-llm-cli/: Cargo.toml  README.md
crates/mesh-llm-commands/: Cargo.toml  README.md
crates/mesh-llm-config/: Cargo.toml  README.md
crates/mesh-llm-config/src/: authoring.rs  lib.rs  model.rs  plugin_validation.rs  store.rs  validate.rs
crates/mesh-llm-config/src/model/: built_in_schema.rs
crates/mesh-llm-console-server/: Cargo.toml  README.md
crates/mesh-llm-console-server/src/: lib.rs
crates/mesh-llm-embedded-runtime/: Cargo.toml  README.md
crates/mesh-llm-events/: Cargo.toml  README.md
crates/mesh-llm-ffi/: Cargo.toml  README.md
crates/mesh-llm-ffi/src/: lib.rs  mesh_ffi.udl
crates/mesh-llm-ffi/tests/: client_exports_compile.rs  error_mapping.rs  live_sdk_smoke.rs  smoke.rs
crates/mesh-llm-gpu-bench/: Cargo.toml  README.md  build.rs
crates/mesh-llm-gpu-bench/src/: capture.rs  cuda.rs  hip.rs  intel.rs  lib.rs  metal.rs  runner.rs
crates/mesh-llm-guardrails/: Cargo.toml  README.md
crates/mesh-llm-guardrails/src/: compact.rs  lib.rs  policy.rs  request_contract.rs  rescue.rs  structured.rs  tools.rs
crates/mesh-llm-hardware-profile/: Cargo.toml  README.md
crates/mesh-llm-host-runtime/: Cargo.toml  README.md
crates/mesh-llm-identity/: Cargo.toml  README.md
crates/mesh-llm-native-runtime/: Cargo.toml  README.md
crates/mesh-llm-native-runtime/src/: cache.rs  flavor.rs  host.rs  lib.rs  load_plan.rs  manifest.rs  resolver.rs
crates/mesh-llm-node/: Cargo.toml
crates/mesh-llm-nodejs/: Cargo.toml
crates/mesh-llm-plugin/: Cargo.toml  build.rs
crates/mesh-llm-routing/: Cargo.toml
crates/mesh-llm-runtime-install/: Cargo.toml  README.md
crates/mesh-llm-sdk/: Cargo.toml  README.md
crates/mesh-llm-skills/: README.md
crates/mesh-llm-system/: Cargo.toml
crates/mesh-llm-test-harness/: Cargo.toml
crates/mesh-llm-tui/: Cargo.toml  README.md
crates/mesh-llm-ui/: Cargo.toml  README.md  package-lock.json  package.json
crates/mesh-mixture-of-agents/: Cargo.toml  README.md
crates/model-artifact/: Cargo.toml
crates/model-hf/: Cargo.toml
crates/model-package/: Cargo.toml  README.md
crates/model-resolver/: Cargo.toml  README.md
crates/openai-frontend/: Cargo.toml
crates/skippy-cache/: Cargo.toml
crates/skippy-coordinator/: Cargo.toml  README.md
crates/skippy-coordinator/src/: topology.rs
crates/skippy-ffi/: Cargo.toml  build.rs
crates/skippy-ffi/src/: lib.rs
crates/skippy-metrics/: Cargo.toml
crates/skippy-model-package/: Cargo.toml
crates/skippy-protocol/: Cargo.toml  build.rs
crates/skippy-protocol/proto/: stage.proto
crates/skippy-protocol/src/: lib.rs
crates/skippy-protocol/src/binary/: activation.rs  codec.rs  mod.rs  types.rs
crates/skippy-runtime/: Cargo.toml
crates/skippy-server/: Cargo.toml  README.md
crates/skippy-topology/: Cargo.toml
crates/skippy-topology/src/: lib.rs  tests.rs
docker/: Dockerfile.client  Dockerfile.cpu  Dockerfile.cuda  Dockerfile.rocm  Dockerfile.vulkan
docs/: AGENTS.md  BENCHMARKS.md  CLI.md  LAYER_PACKAGE_REPOS.md  MESHES.md  NODE_REP.md  README.md  SDK.md  SKIPPY.md  SKIPPY_SPLITS.md  USAGE.md  index.html  install.ps1
docs/design/: CRATE_DECOMPOSITION.md  DESIGN.md  EMBEDDED_CLIENT_ADR.md  EMITTER_HOOKS.md  GLM_NATIVE_MTP_SKIPPY_ARCHITECTURE.md  JAN_MESH_API_INTEGRATION.md  MOA_GATEWAY.md  NATIVE_RUNTIMES.md  NODE_OWNER_IDENTITY.md  OPENAI_GUARDRAILS.md  TESTING.md
docs/plans/: gpu-benchmark-cli.md
docs/plugins/: telemetry.md
docs/sdk/: kotlin.md  node.md  rust.md  swift.md
docs/skippy/: CONFIGURATION.md  FAMILY_CERTIFY.md  LLAMA_BENCHY.md  LLAMA_PARITY.md  NEW_MODEL_ONBOARDING.md  TOPOLOGY_PLANNER.md
docs/specs/: layer-package-repos.md
evals/: README.md  compare.sh  run-multi.sh  run.sh
fly/: Dockerfile
mesh-api-ffi/src/: lib.rs
mesh-api-ffi/tests/: smoke.rs
mesh-llm/: Cargo.toml  README.md  TODO.md  build.rs
mesh-llm/docs/: DESIGN.md  (+7 more)
moe/: MOE_CLI_PLAN.md  README.md
scripts/: affected-crates.sh  benchmark-prefix-affinity.sh  build-linux-amd.sh  build-linux.sh  build-llama.sh  build-mac.sh  build-release.sh  build-ui.sh  build-windows.ps1  check-sdk-contract.sh  ci-client-auto-test.sh  ci-compat-smoke.sh  ci-gguf-smoke-test.sh  ci-hf-download-smoke.sh  ci-install-native-runtime.sh  ci-kotlin-sdk-smoke.sh  ci-mlx-smoke-test.sh  ci-native-sdk-smoke.sh  ci-prepare-native-runtime.sh  ci-rust-sdk-smoke.sh  ci-sdk-fixture.sh  ci-swift-sdk-smoke.sh  ci-two-node-client-serving-smoke.sh  ci-two-node-split-smoke.sh  compare-moe-rankings.py  detect-cuda-arch.sh  generate-native-runtime-release-manifest.sh  install-windows-sdk.ps1  mlx-parity-exact.tsv  package-native-runtime.sh  package-native-sdk-crate.sh  package-native-sdk.sh  package-release.ps1  package-release.sh  package-sdk-console-assets.sh  plan-clippy-batches.sh  prepare-llama.sh  prepare-swift-package-release.sh  publish-crates.sh  qa-agent-tool-call-reliability.py  (+19 more)
sdk/: README.md
(+590 files in other folders)
