[package]
name = "mesh-llm-ffi"
version.workspace = true
edition = "2024"

[lib]
name = "meshllm_ffi"
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []
host = ["mesh-llm-node"]
embedded-runtime = ["mesh-llm-host-runtime"]

[dependencies]
mesh-llm-api-server = { path = "../mesh-llm-api-server" }
mesh-llm-console-server = { path = "../mesh-llm-console-server" }
mesh-llm-host-runtime = { path = "../mesh-llm-host-runtime", default-features = false, optional = true }
mesh-llm-node = { path = "../mesh-llm-node", optional = true }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread"] }
uniffi = "=0.31.0"

[build-dependencies]
uniffi = { version = "=0.31.0", features = ["build"] }

[dev-dependencies]
mesh-llm-api-server = { path = "../mesh-llm-api-server" }
