[package]
name = "mesh-llm-ffi"
version.workspace = true
edition = "2024"

[lib]
name = "meshllm_ffi"
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = []
host = ["mesh-llm-node"]
embedded-runtime = []

[dependencies]
mesh-llm-sdk = { path = "../mesh-llm-sdk", default-features = false, features = ["client", "node", "console", "serving"] }
mesh-llm-node = { path = "../mesh-llm-node", optional = true }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread"] }
uniffi = "=0.31.0"

[build-dependencies]
uniffi = { version = "=0.31.0", features = ["build"] }

[dev-dependencies]
mesh-llm-sdk = { path = "../mesh-llm-sdk", default-features = false, features = ["client", "node", "console"] }
