[package]
name = "mesh-llm-guardrails"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Reusable guardrail and compaction primitives for mesh-llm OpenAI-compatible paths"
repository = "https://github.com/Mesh-LLM/mesh-llm"
homepage = "https://github.com/Mesh-LLM/mesh-llm"
readme = "README.md"

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
